Thu Jun 14 20:52:13 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am: applied patch from Sander Vesik for -j2 

Thu Jun 14 10:07:59 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/preproc.c: removed a warning on xsl:transform
	* tests/docs/Makefile.am tests/docs/array.xml tests/general/Makefile.am
	  tests/general/array.out tests/general/array.xsl: added a new
	  test fround in xsl-dev

Wed Jun 13 23:12:57 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/docbook/result/html/*.html tests/XSLTMark/xslbench[12].out
	  tests/xmlspec/REC-xml-20001006*.html: the changes to the HTML
	  serializer of libxml impacted the result of some tests. Checked
	  that the XML REC renders identically.

Mon Jun 11 07:19:06 MDT 2001 John Fleck <jfleck@inkstain.net>

	* fixing embarassing typos in doc/tutorial/libxslttutorial.xml and 
	generated html

Tue Jun 12 07:42:35 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: fixed bug #55670, namespaces must
	  be propagated when evaluating global variables.
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/general/bug-36-* tests/docs/bug-36-*: added a specific
	  regression test for #55670 

Mon Jun 11 09:35:53 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/xslt.html: linked to the tutorial

Sun Jun 10 19:36:31 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/tutorial/libxslt_tutorial.c,  libxslttutorial.html,
	libxslttutorial.xml 
	adding tutorial

Sun Jun 10 21:52:35 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c: closed bug #55723, problem was due to
	  a limitation of xsltGetNamespace() when the insertion point
	  is the document.
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/general/bug-35-* tests/docs/bug-35-*: added a specific
	  regression test for #55723 

Sun Jun 10 13:37:33 HKT 2001 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed problems with document() in